2006-06-05  Jim Garlick <garlick@llnl.gov>

	* doc/pdsh.1.in : fix a few typos [Chris Pepper]

2006-04-07  Mark Grondona <mgrondona@llnl.gov>

	* src/pdsh/mod.c : Report more specific errors when path to
	pdsh modules is not secure, and include the real path to the
	directory with the permissions problem.

2006-03-22  Mark Grondona <mgrondona@llnl.gov>

	* src/common/split.c : Fix missing headers.

2006-03-22  Jim Garlick <garlick@llnl.gov>

	* src/xcpucmd.c : Use new local exec facility and set args to
	  run /bin/sh -c 'cmd'.
	
2006-03-22  Mark Grondona <mgrondona@llnl.gov>
	* src/common/split.c, src/common/split.h, src/pdsh/opt.c : 
	  Move list_join() from pdsh/opt.c to common/split.c.

	* src/pdsh/rcmd.h, src/pdsh/rcmd.c, src/pdsh/dsh.c, 
	  src/pdsh/opt.c, src/modules/sshcmd.c, src/modules/genders.c :
	  Missing updates from rcmd-rewrite branch. Allow user@
	  to be specified in -w host spec. Add rcmd_opt_set() to
	  allow rcmd modules to set rcmd-specific options (e.g. resolve_hosts).

	* testsuite/pdsh.test/pdsh.exp :
	  Add test for "," in host range. Increase version number.

	* pdsh.spec : Add COPYING to docs. Remove -n from %setup.

	* : tag pdsh-2.10.

2006-03-21  Mark Grondona <mgrondona@llnl.gov>

	* src/pdsh/main.c (_interactive_dsh) : 
	  Add support for command history in interactive mode when using 
	  readline.  History file is placed in ~/.pdsh/history. 
	  Original patch from Sebastien Cabaniols <Sebastian.Cabaniols@hp.com>.

2006-03-16  Jim Garlick <garlick@llnl.gov>

	* src/modules/xcpucmd.c : Add support support for signals.
	  Change mini shell script so -S hack will work.

2006-03-15  Mark Grondona <mgrondona@llnl.gov>
	* src/pdsh/mod.c : Remove error message when loading duplicate
	  module in pdsh. This is OK since we removed code which
	  only loaded .la's, we could be loading corresponding .so
	  after the .la (or vice versa).

	* pdsh.spec : Remove unneeded .la and .a files in packages.

	* : tag pdsh-2.9
